--- a/demo/assets/styles.css
+++ b/demo/assets/styles.css
@@ -8,11 +8,8 @@ html, body { min-height: 100%; font-family: sans-serif; }
 
 #content { margin-left: 250px; padding: 25px; }
 
+h2 { font-size: 16px; font-weight: 400; padding: 10px; text-transform: uppercase; color: #979980; background: #f1f2ef; border-radius: 5px; margin: 0; letter-spacing: .5px; }
+
 .chart_wrap { margin: 20px 0; width: 470px; height: 300px; background: #fafafa; position: relative; }
-
-h1 { font-size: 16px; font-weight: 400; padding: 10px; text-transform: uppercase; color: #979980; background: #f1f2ef; border-radius: 5px; margin: 0; letter-spacing: .5px; }
-
-
-#profile_bar,
-#pie_chart,
-#line_chart { position: absolute; top: 0; left: 0; width: 100%; height: 100%; }
+.chart_wrap.large { width: 1100px; height: 440px; background: #91b92c; }
+.chart_el { position: absolute; top: 0; left: 0; width: 100%; height: 100%; }
