--- a/demo/assets/styles.css
+++ b/demo/assets/styles.css
@@ -13,3 +13,5 @@ h2 { font-size: 16px; font-weight: 400; padding: 10px; text-transform: uppercase
 .chart_wrap { margin: 20px 0; width: 470px; height: 300px; background: #fafafa; position: relative; }
 .chart_wrap.large { width: 1000px; height: 440px; background: #99c031; }
 .chart_el { position: absolute; top: 0; left: 0; width: 100%; height: 100%; }
+
+.flexi svg { position: absolute !important; top: 0; left: 0; width: 100% !important; height: auto !important; }
