--- a/demo/assets/styles.css
+++ b/demo/assets/styles.css
@@ -8,6 +8,7 @@ html, body { min-height: 100%; font-family: sans-serif; }
 
 #content { margin-left: 180px; padding: 25px; }
 
+h1 { font-size: 24px; font-weight: 400; padding: 10px 0; text-transform: uppercase; color: #979980; margin: 0 0 15px 0; letter-spacing: .5px; }
 h2 { font-size: 16px; font-weight: 400; padding: 10px; text-transform: uppercase; color: #979980; background: #f1f2ef; border-radius: 5px; margin: 0; letter-spacing: .5px; }
 
 .chart_wrap { margin: 20px 0; width: 470px; height: 300px; background: #fafafa; position: relative; }
